--- a/pjtsite/pjtapp/templates/uploadorders.html
+++ b/pjtsite/pjtapp/templates/uploadorders.html
@@ -28,4 +28,9 @@
     </div>
     </div>
   </body>
+  <div id="footer">
+    <a href="uploadprintdata" class="button">Upload new Print Models</a>
+    <a href="details" class="button">Order Details</a>
+    <a href="/" class="button">Order Summary</a>
+  </div>
 </html>
