--- a/pjtsite/pjtapp/templates/uploadprintdata.html
+++ b/pjtsite/pjtapp/templates/uploadprintdata.html
@@ -25,4 +25,9 @@
       </form>
     </div>
   </body>
+  <div id="footer">
+    <a href="uploadorders" class="button">Upload new Orders</a>
+    <a href="details" class="button">Order Details</a>
+    <a href="/" class="button">Order Summary</a>
+  </div>
 </html>
