--- a/pjtsite/pjtapp/templates/home.html
+++ b/pjtsite/pjtapp/templates/home.html
@@ -219,8 +219,8 @@
     {% comment %} {% for j in OrderItemsList %} {% endfor %} {% endcomment %}
   </div>
     <div id="footer">
-      <a href="uploadorders" class="button">Upload new Orders</a>
-      <a href="uploadprintdata" class="button">Upload new Print Models</a>
+      <a href="uploadorders/" class="button">Upload new Orders</a>
+      <a href="uploadprintdata/" class="button">Upload new Print Models</a>
     </div>
   </body>
 
