--- a/pjtsite/pjtapp/templates/uploadorders.html
+++ b/pjtsite/pjtapp/templates/uploadorders.html
@@ -11,6 +11,7 @@
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
     crossorigin="anonymous">
     </script>
+    
   </head>
   <style>
     .home-content-table {
@@ -55,7 +56,7 @@
   </style>
   <body>
     <h1>Upload Orders</h1>
-    <div class="container-2"> 
+    {% comment %} <div class="container-2"> 
       <div class="box-1">
         <label for "ordersfile">Select an Orders CSV File:</label>
         <input type="file" id="ordersfile" name="ordersfile" accept=".csv">
@@ -63,11 +64,32 @@
       <div class="box-2">
         <label for "orderitemsfile">Select an Order Items CSV File:</label>
         <input type="file" id="orderitemsfile" name="orderitemsfile" accept=".csv">
-      </div>
+      </div> {% endcomment %}
+      <div class="box-2">
+        <form method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+          <div>
+            <label for="o_file">Upload Orders File:</label>
+            <input type="file" name="ofile" id="o_file">
+          </div>
+
+          <button type="submit">Upload</button>
+        </form>
+
+       </div>
       <div class="box-3">
-        <input type= "submit" name = submit value = "Submit"/>
-    </div>
-    </div>
+        <form method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+          <div>
+            <label for="id_file">Upload Order Items File:</label>
+            <input type="file" name="file" id="id_file">
+          </div>
+
+          <button type="submit">Upload</button>
+        </form>
+
+       </div>
+      {% comment %} </div> {% endcomment %}
     <div id="footer">
       <a href="uploadprintdata" class="button">Upload new Print Models</a>
       <a href="/" class="button">Order Summary</a>
