--- a/pjtsite/pjtapp/templates/uploadprintmodels.html
+++ b/pjtsite/pjtapp/templates/uploadprintmodels.html
@@ -6,19 +6,9 @@
     <meta charset="utf-8" />
     <title>Test PJT</title>
     <link rel="stylesheet" href="{%static 'style.css'%}" />
-    <script 
-    src="https://code.jquery.com/jquery-3.6.1.min.js"
-    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-    crossorigin="anonymous">
-    </script>
     
   </head>
   <style>
-    .home-content-table {
-      border-collapse: collapse;
-      margin: 25px 0;
-      font-size: 0.9em;
-    }
     #footer {
       position: fixed;
       padding: 10px 10px 20px 0px;
@@ -46,13 +36,6 @@
       height: 80px;
       border: 1px solid gray;
     }
-    #rcorners1 {
-      border-radius: 25px;
-      background: #dbedfe;
-      padding: 30px;
-      width: 200px;
-      height: 150px;
-    }
   </style>
   <body>
     <h1>Upload Print Models</h1>
@@ -72,8 +55,13 @@
        </div>
       {% comment %} </div> {% endcomment %}
     <div id="footer">
-      <a href="uploadprintdata" class="button">Upload new Print Models</a>
-      <a href="/" class="button">Order Summary</a>
+        {% comment %} <a href="uploadorders/" class="button">Upload new Orders</a>
+
+        <a href="uploadorderitems/" class="button">Upload new Order Items</a>
+        <a href="uploadprintdata/" class="button">Upload new Print Data</a>
+
+        <a href="uploadprintmodels/" class="button">Upload new Print Models</a> {% endcomment %}
+        <a href="/" class="button">Order Summary</a>
     </div>
   </body>
 
