--- a/pjtsite/assets/style.css
+++ b/pjtsite/assets/style.css
@@ -105,7 +105,7 @@ a.button {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: lightcoral;
+  background-color: grey;
   color: white;
   text-align: center;
 }
